--- a/Front/ProEventos-App/src/app/componets/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/componets/eventos/eventos.component.html
@@ -1,5 +1,4 @@
-<h2>Eventos</h2>
-<hr>
+<app-titulo [titulo]="'Eventos'"></app-titulo>
 <div class="form-inline">
   <div class="form-group mb-2">
     <label class="mr-2">Filtro: </label>
@@ -16,6 +15,7 @@
     <tr>
       <th>
         <button class="btn btn-outline-light btn-sm" (click)="exibirOcultarImagem()">
+          <i class="{{exibirImagem ? 'fa fa-eye-slash' : 'fa fa-eye'}}"></i>
           {{exibirImagem ? 'Ocultar' : 'Exibir'}}
         </button>
       </th>
@@ -35,15 +35,19 @@
         src="/assets/imagens/{{evento.imagemURL}}"
         [style.width.px]="larguraImg" [style.margin.px]="margemImg">
       </td>
-      <td>{{evento.eventoId}}</td>
+      <td>{{evento.id}}</td>
       <td>{{evento.tema}}</td>
       <td>{{evento.local}}</td>
-      <td>{{evento.dataEvento}}</td>
+      <td>{{evento.dataEvento | DateTimeFormatPletsch}}</td>
       <td>{{evento.qtdPessoas}}</td>
-      <td>{{evento.lote}}</td>
+      <td>{{evento.lotes[0].nome | uppercase}}</td>
       <td>
-        <button type="button" class="btn btn-primary btn-sm mr-2">Editar</button>
-        <button type="button" class="btn btn-danger btn-sm">Excluir</button>
+        <button type="button" class="btn btn-primary btn-sm mr-2" tooltip="Editar">
+          <i class="fa fa-edit"></i>
+        </button>
+        <button type="button" class="btn btn-danger btn-sm" tooltip="Excluir" (click)="openModal(template)">
+          <i class="fa fa-trash"></i>
+        </button>
       </td>
     </tr>
   </tbody>
@@ -55,3 +59,11 @@
     </tr>
   </tfoot>
 </table>
+
+<ng-template #template>
+  <div class="modal-body text-center">
+    <p>Você quer deletar este evento?</p>
+    <button type="button" class="btn btn-primary" (click)="confirm()" >Sim</button>
+    <button type="button" class="btn btn-default" (click)="decline()" >Não</button>
+  </div>
+</ng-template>
