--- a/Front/ProEventos-App/src/app/componets/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/componets/eventos/eventos.component.html
@@ -1,69 +1,3 @@
-<app-titulo [titulo]="'Eventos'"></app-titulo>
-<div class="form-inline">
-  <div class="form-group mb-2">
-    <label class="mr-2">Filtro: </label>
-    <input
-    type="text"
-    class="form-control mr-2"
-    placeholder="buscar"
-    [(ngModel)]="filtroLista"
-    >
-  </div>
-</div>
-<table class="table table-striped">
-  <thead class="thead-dark">
-    <tr>
-      <th>
-        <button class="btn btn-outline-light btn-sm" (click)="exibirOcultarImagem()">
-          <i class="{{exibirImagem ? 'fa fa-eye-slash' : 'fa fa-eye'}}"></i>
-          {{exibirImagem ? 'Ocultar' : 'Exibir'}}
-        </button>
-      </th>
-      <th>#</th>
-      <th>Tema</th>
-      <th>Local</th>
-      <th>Data</th>
-      <th>Qtd Pessoas</th>
-      <th>Lote</th>
-      <th>Opções</th>
-    </tr>
-  </thead>
-  <tbody *ngIf="eventosFiltrados && eventosFiltrados.length">
-    <tr *ngFor="let evento of eventosFiltrados">
-      <td>
-        <img [collapse]="!exibirImagem" [isAnimated]="true"
-        src="/assets/imagens/{{evento.imagemURL}}"
-        [style.width.px]="larguraImg" [style.margin.px]="margemImg">
-      </td>
-      <td>{{evento.id}}</td>
-      <td>{{evento.tema}}</td>
-      <td>{{evento.local}}</td>
-      <td>{{evento.dataEvento | DateTimeFormatPletsch}}</td>
-      <td>{{evento.qtdPessoas}}</td>
-      <td>{{evento.lotes[0].nome | uppercase}}</td>
-      <td>
-        <button type="button" class="btn btn-primary btn-sm mr-2" tooltip="Editar">
-          <i class="fa fa-edit"></i>
-        </button>
-        <button type="button" class="btn btn-danger btn-sm" tooltip="Excluir" (click)="openModal(template)">
-          <i class="fa fa-trash"></i>
-        </button>
-      </td>
-    </tr>
-  </tbody>
-  <tfoot *ngIf="!eventosFiltrados || !eventosFiltrados.length">
-    <tr>
-      <td colspan="8">
-        <h4>Nenhum evento encontrado</h4>
-      </td>
-    </tr>
-  </tfoot>
-</table>
+<app-titulo [titulo]="'Eventos'" [iconClass]="'fa fa-calendar-alt'" [botaoListar]="true"></app-titulo>
 
-<ng-template #template>
-  <div class="modal-body text-center">
-    <p>Você quer deletar este evento?</p>
-    <button type="button" class="btn btn-primary" (click)="confirm()" >Sim</button>
-    <button type="button" class="btn btn-default" (click)="decline()" >Não</button>
-  </div>
-</ng-template>
+<router-outlet></router-outlet>
