--- a/Front/ProEventos-App/src/styles.scss
+++ b/Front/ProEventos-App/src/styles.scss
@@ -1,5 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-
 /* Importing Bootstrap SCSS file. */
 @import "~bootstrap/scss/bootstrap";
 
@@ -7,3 +6,5 @@
 @import "~ngx-bootstrap/datepicker/bs-datepicker";
 
 @import "../node_modules/@fortawesome/fontawesome-free/css/all.min.css";
+@import "../node_modules/bootswatch/dist/cosmo/bootstrap.min.css";
+
