--- a/Front/ProEventos-App/src/app/componets/eventos/evento-lista/evento-lista.component.html
+++ b/Front/ProEventos-App/src/app/componets/eventos/evento-lista/evento-lista.component.html
@@ -44,9 +44,9 @@
         <td class="d-none d-md-table-cell">{{evento.local}}</td>
         <td>{{evento.dataEvento | DateTimeFormatPletsch}}</td>
         <td class="d-none d-md-table-cell">{{evento.qtdPessoas}}</td>
-        <td class="d-none d-md-table-cell">{{evento.lotes[0].nome | uppercase}}</td>
+        <td class="d-none d-md-table-cell">{{evento.lotes[0]?.nome | uppercase}}</td>
         <td>
-          <button type="button" class="btn btn-danger btn-lg" tooltip="Excluir" (click)="openModal(template)">
+          <button type="button" class="btn btn-danger btn-lg" tooltip="Excluir" (click)="openModal($event, template, evento.id)">
             <i class="fa fa-trash"></i>
           </button>
         </td>
@@ -64,7 +64,7 @@
 
 <ng-template #template>
   <div class="modal-body text-center">
-    <p>Você quer deletar este evento?</p>
+    <p>Você quer deletar o evento {{this.eventoId}}?</p>
     <button type="button" class="btn btn-primary" (click)="confirm()">Sim</button>
     <button type="button" class="btn btn-default" (click)="decline()">Não</button>
   </div>
