--- a/Front/ProEventos-App/src/app/componets/eventos/evento-detalhe/evento-detalhe.component.html
+++ b/Front/ProEventos-App/src/app/componets/eventos/evento-detalhe/evento-detalhe.component.html
@@ -2,8 +2,8 @@
   <form [formGroup]="form">
     <div class="p-3">
 <!--       <p>Form value: {{form.value | json}}</p>
-      <p>Form valid: {{form.status | json}}</p>
- -->      <div class="form-row">
+      <p>Form valid: {{form.status | json}}</p> -->
+      <div class="form-row">
         <div class="form-group col-md-12">
           <label>Tema</label>
           <input type="text" class="form-control"
@@ -49,19 +49,13 @@
       <div class="form-row">
         <div class="form-group col-md-2">
           <label>Qtd Pessoas</label>
-          <input type="number" class="form-control is-invalid"
+          <input type="number" class="form-control"
           [ngClass]="cssValidator(f.qtdPessoas)"
           formControlName="qtdPessoas" placeholder="">
-          <div *ngIf="f.qtdPessoas.errors?.required" class="invalid-feedback">
-            Qtd Pessoas é obrigatório.
-          </div>
-          <div *ngIf="f.qtdPessoas.errors?.max" class="invalid-feedback">
-            A quantidade máxima de pessoas é 120.000.
-          </div>
         </div>
         <div class="form-group col-md-2">
           <label>Telefone</label>
-          <input type="text" class="form-control is-invalid"
+          <input type="text" class="form-control"
           [ngClass]="cssValidator(f.telefone)"
           formControlName="telefone" placeholder="(000) 90000-0000">
           <div *ngIf="f.telefone.errors?.required" class="invalid-feedback">
@@ -70,7 +64,7 @@
         </div>
         <div class="form-group col-md-4">
           <label>Email</label>
-          <input type="text" class="form-control is-invalid"
+          <input type="text" class="form-control"
           [ngClass]="cssValidator(f.email)"
           formControlName="email" placeholder="e-mail">
           <div *ngIf="f.email.errors?.required" class="invalid-feedback">
@@ -82,7 +76,7 @@
         </div>
         <div class="form-group col-md-4">
           <label>Imagem</label>
-          <input type="text" class="form-control is-invalid"
+          <input type="text" class="form-control"
           [ngClass]="cssValidator(f.imagemURL)"
           formControlName="imagemURL" placeholder="imagem">
           <div *ngIf="f.imagemURL.errors?.required" class="invalid-feedback">
@@ -96,7 +90,7 @@
         <button class="btn btn-outline-secondary mr-auto border" (click)="resetForm()">
           Cancelar Alteração
         </button>
-        <button class="btn btn-success" [disabled]="!form.valid" (click)="salvarAlteracao()">
+        <button [disabled]="!form.valid"  class="btn btn-success"(click)="salvarEvento()">
           <!-- <span class="spinner-border spinner-border-sm mr-1"></span> -->
           Salvar Evento
         </button>
@@ -104,3 +98,114 @@
     </div>
   </form>
 </div>
+
+
+<div class="card rounded shadow-sm mt-4" *ngIf="modoEditar">
+<!--       <p>Form value: {{form.controls.lotes.value | json}}</p>
+      <p>Form valid: {{form.controls.lotes.status | json}}</p> -->
+  <div class="p-3">
+    <div class="d-flex border-bottom">
+      <h2 class="mr-auto">
+        Lotes do Evento
+      </h2>
+      <h2>
+        <i class="fas fa-money-bill-wave"></i>
+      </h2>
+    </div>
+    <p>Clique em Lote para adicionar e preencher novos Lotes</p>
+    <div class="form-row p-1">
+      <div [formGroup]="form" class="col">
+        <div formArrayName="lotes" *ngFor="let lote of lotes.controls; let i=index">
+          <fieldset [formGroupName]="i" class="form-group">
+            <legend class="d-flex justify-content-between capitalize">
+              {{retornaTituloLote(lotes.get(i+'.nome').value)}}
+              <button (click)="removerLote(template, i)" class="p-2 btn btn-sm btn-outline-warning mb-1 d-flex"
+                tooltip="Excluir Lote"
+                [adaptivePosition]="false"
+                [delay]="500"
+                placement="left">
+              <i class="fa fa-window-close my-1"></i>
+              <b class="ml-1 d-none d-sm-block">Excluir</b>
+            </button>
+          </legend>
+          <div class="row">
+            <div class="form-group col-md-4">
+              <label>Nome</label>
+              <input
+              [ngClass]="cssValidator(lotes.get(i+'.nome'))"
+              type="text" class="form-control" formControlName="nome" placeholder="Lote">
+              <div *ngIf="lotes.get(i+'.nome').errors?.required" class="invalid-feedback">
+                Nome é obrigatório.
+              </div>
+            </div>
+            <div class="form-group col-md-4">
+              <label>Quantidade</label>
+              <input
+              [ngClass]="cssValidator(lotes.get(i+'.quantidade'))"
+              type="text" class="form-control" formControlName="quantidade" placeholder="000">
+              <div *ngIf="lotes.get(i+'.quantidade').errors?.required" class="invalid-feedback">
+                Quantidade é obrigatória.
+              </div>
+            </div>
+            <div class="form-group col-md-4">
+              <label>Preço</label>
+              <input currencyMask
+              [ngClass]="cssValidator(lotes.get(i+'.preco'))"
+              type="text" currencyMask class="form-control" formControlName="preco" placeholder="R$ 0,00"
+              [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',', align: 'left' }">
+              <div *ngIf="lotes.get(i+'.preco').errors?.required" class="invalid-feedback">
+                Preço é obrigatório.
+              </div>
+            </div>
+            <div class="form-group col-md-4">
+              <label>Data Início</label>
+              <input type="datetime" class="form-control"
+              bsDatepicker [bsConfig]="{isAnimated: true,
+                adaptivePosition: true,
+                dateInputFormat: 'DD/MM/YYYY',
+                containerClass: 'theme-default',
+                showWeekNumbers: false}"
+              formControlName="dataInicio"
+              placeholder="01/01/2019">
+            </div>
+            <div class="form-group col-md-4">
+              <label>Data Fim</label>
+              <input type="text" class="form-control"
+              bsDatepicker [bsConfig]="{isAnimated: true,
+                adaptivePosition: true,
+                dateInputFormat: 'DD/MM/YYYY',
+                containerClass: 'theme-default',
+                showWeekNumbers: false}"
+              formControlName="dataFim"
+              placeholder="01/01/2019">
+            </div>
+          </div>
+        </fieldset>
+      </div>
+    </div>
+  </div>
+  <button (click)="adicionarLote()" class="d-flex btn btn-outline-primary">
+    <i class="fa fa-plus-circle my-1"></i>
+    <b class="ml-1">Lote</b>
+  </button>
+</div>
+<div class="card-footer">
+  <div class="d-flex">
+    <button class="btn btn-outline-secondary mr-auto border">
+      Cancelar Alteração
+    </button>
+    <button [disabled]="!form.controls.lotes.valid"  (click)="salvarLotes()" class="btn btn-success">
+      Salvar Lotes
+    </button>
+  </div>
+</div>
+</div>
+<br>
+
+<ng-template #template>
+  <div class="modal-body text-center">
+    <p>Você quer deletar o lote {{this.loteAtual.nome}}?</p>
+    <button type="button" class="btn btn-primary" (click)="confirmDeleteLote()">Sim</button>
+    <button type="button" class="btn btn-default" (click)="declineDeleteLote()">Não</button>
+  </div>
+</ng-template>
