--- a/Front/ProEventos-App/src/app/componets/eventos/evento-lista/evento-lista.component.html
+++ b/Front/ProEventos-App/src/app/componets/eventos/evento-lista/evento-lista.component.html
@@ -36,7 +36,7 @@
     <tbody *ngIf="eventosFiltrados && eventosFiltrados.length">
       <tr *ngFor="let evento of eventosFiltrados" (click)="detalheEvento(evento.id)" style="cursor: pointer;">
         <td class="d-none d-md-table-cell">
-          <img [collapse]="!exibirImagem" [isAnimated]="true" src="/assets/imagens/{{evento.imagemURL}}"
+          <img [collapse]="!exibirImagem" [isAnimated]="true" [src]="mostraImagem(evento.imagemURL)"
             [style.width.px]="larguraImg" [style.margin.px]="margemImg">
         </td>
         <td>{{evento.id}}</td>
